--- a/01. Basics/index.html
+++ b/01. Basics/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./Basics/001. HelloWorld.js" defer></script>
+    <!-- <script src="./Basics/001. HelloWorld.js" defer></script> -->
     <title>Coding in JavaScript</title>
 </head>
 <body>
