--- a/03. Array/index.html
+++ b/03. Array/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="./01. OneDomensional Array/001. ArrayJS.js" defer></script> -->
-    <script src="./01. OneDomensional Array/002. ArraysFunction.js" defer></script>
+    <script src="./01. OneDomensional Array/001. ArrayJS.js" defer></script>
+    <!-- <script src="./01. OneDomensional Array/002. ArraysFunction.js" defer></script> -->
     <title>Array in JavaScript</title>
 </head>
 <body>
