--- a/04. Searching/index.html
+++ b/04. Searching/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./001. LinearSerch.js"></script>
+    <!-- <script src="./001. LinearSerch.js" defer></script> -->
+    <script src="002. BinarySearch.js" defer></script>
     <title>Searching</title>
 </head>
 <body>
