--- a/05. Sorting/index.html
+++ b/05. Sorting/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    sc
     <title>Sorting</title>
 </head>
 <body>
-    
+    <p>All Searching algorithms</p>
 </body>
 </html>
