--- a/05. Sorting/index.html
+++ b/05. Sorting/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    sc
+    <script src="1. SelectionSort.js" defer></script>
     <title>Sorting</title>
 </head>
 <body>
-    <p>All Searching algorithms</p>
+    <h1>All Searching Algorithms</h1>
 </body>
 </html>
