--- a/05. Sorting/index.html
+++ b/05. Sorting/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="1. SelectionSort.js" defer></script>
+    <!-- <script src="001. SelectionSort.js" defer></script> -->
+    <script src="./002. BubbleSort.js" defer></script>
     <title>Sorting</title>
 </head>
 <body>
