Reverse of Array

--- a/03. Array/index.html
+++ b/03. Array/index.html
@@ -6,7 +6,8 @@
     <!-- <script src="./01. OneDomensional Array/001. ArrayJS.js" defer></script> -->
     <!-- <script src="./01. OneDomensional Array/002. ArraysFunction.js" defer></script> -->
     <!-- <script src="./01. OneDomensional Array/003. PeakElement.js"></script> -->
-    <script src="./01. OneDomensional Array/004. MaxSumOfSubArray.js" defer></script>
+    <!-- <script src="./01. OneDomensional Array/004. MaxSumOfSubArray.js" defer></script> -->
+    <script src="./01. OneDomensional Array/005. ReverseArray.js" defer></script>
     <title>Array in JavaScript</title>
 </head>
 <body>
