--- a/07. String/index.html
+++ b/07. String/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./001. STringReverse.js" defer></script>
+    <!-- <script src="./001. STringReverse.js" defer></script> -->
+    <script src="./002. CheckPlindrom.js" defer></script>
     <title>String Problems</title>
 </head>
 <body>
